tests/algorithms/x/Python/data_structures/binary_tree/merge_two_binary_trees.error
run: exit status 1
Traceback (most recent call last):
  File "/workspace/mochi/tests/algorithms/x/Python/data_structures/binary_tree/merge_two_binary_trees.py", line 39, in <module>
    tree1 = Node(left=Node(left=Node(left=Leaf(), value=4, right=Leaf()), value=2, right=Leaf()), value=1, right=Node(left=Leaf(), value=3, right=Leaf()))
                                          ^^^^^^
TypeError: 'NoneType' object is not callable
